--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview", 
+    "start": "vite preview"    
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
